[gd_scene load_steps=48 format=3 uid="uid://b6x4q4tv2o5bk"]

[ext_resource type="Script" path="res://Characters/Player/main_player.gd" id="1_wlpyr"]
[ext_resource type="Texture2D" uid="uid://c3d8d3u01aewa" path="res://Assets/Farmer Story Asset and Backgrounds v2/Farmer Story Sprites/Farmer Story Sprites.png" id="2_47nhi"]
[ext_resource type="Script" path="res://Scripts/Global/FSM/FiniteStateMachine.gd" id="2_eq0g0"]
[ext_resource type="Script" path="res://Characters/Player/States/Idle.gd" id="3_secp5"]
[ext_resource type="Script" path="res://Characters/Player/States/Run.gd" id="4_uftwf"]
[ext_resource type="Script" path="res://Characters/Player/States/Walk.gd" id="5_doywo"]
[ext_resource type="Script" path="res://Characters/Player/States/Jump.gd" id="6_suhjf"]
[ext_resource type="Script" path="res://Characters/Player/States/attake.gd" id="8_rw7fb"]
[ext_resource type="Script" path="res://Characters/Player/camera.gd" id="9_5h600"]
[ext_resource type="Script" path="res://Scripts/Global/ui.gd" id="9_aq0h3"]
[ext_resource type="Script" path="res://Characters/Player/States/knockback.gd" id="9_pcwvf"]
[ext_resource type="LabelSettings" uid="uid://b68mhdb1sn8ie" path="res://materials/font.tres" id="12_omhln"]
[ext_resource type="Texture2D" uid="uid://dlrha1ot3pqpd" path="res://UI/phone ui/lineLight24.png" id="13_ewic2"]
[ext_resource type="Script" path="res://Scripts/Global/coins.gd" id="13_vdfe5"]
[ext_resource type="Script" path="res://Scripts/TheDevil_shop/coins_2.gd" id="14_lopw3"]
[ext_resource type="Texture2D" uid="uid://c57otlco4oyr" path="res://UI/phone ui/lineLight23.png" id="14_tdjkf"]
[ext_resource type="Texture2D" uid="uid://brexbwryv7nj5" path="res://UI/phone ui/lineLight22.png" id="15_2w0sf"]
[ext_resource type="Texture2D" uid="uid://j5x234risfqv" path="res://UI/phone ui/lineLight12.png" id="16_wj17s"]
[ext_resource type="Texture2D" uid="uid://dmgtnaohaebpg" path="res://UI/phone ui/lineLight47.png" id="17_w3gxq"]
[ext_resource type="Texture2D" uid="uid://bt4v323kcgd34" path="res://UI/phone ui/lineLight34.png" id="18_wqiah"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2lg64"]
radius = 4.0
height = 14.0

[sub_resource type="AtlasTexture" id="AtlasTexture_khm58"]
atlas = ExtResource("2_47nhi")
region = Rect2(16, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_isa4j"]
atlas = ExtResource("2_47nhi")
region = Rect2(0, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_05i3x"]
atlas = ExtResource("2_47nhi")
region = Rect2(16, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1febg"]
atlas = ExtResource("2_47nhi")
region = Rect2(32, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5kp8"]
atlas = ExtResource("2_47nhi")
region = Rect2(0, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_86yo3"]
atlas = ExtResource("2_47nhi")
region = Rect2(16, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_eouqw"]
atlas = ExtResource("2_47nhi")
region = Rect2(32, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kepp"]
atlas = ExtResource("2_47nhi")
region = Rect2(0, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bx75l"]
atlas = ExtResource("2_47nhi")
region = Rect2(16, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ub5wh"]
atlas = ExtResource("2_47nhi")
region = Rect2(32, 96, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_54qng"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_khm58")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_isa4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_05i3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1febg")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5kp8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86yo3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eouqw")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kepp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bx75l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ub5wh")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_yysya"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player_animation:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 0.9), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player_animation:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}

[sub_resource type="Animation" id="Animation_2etp0"]
resource_name = "Jump"
length = 0.21
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player_animation:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.2),
"transitions": PackedFloat32Array(2.14355, 1, 0.210224),
"update": 0,
"values": [Vector2(0.9, 0.8), Vector2(0.8, 1.5), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_tg2wj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player_animation:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player_animation:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sword:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("UI/Control/GameUi/Sprite2D:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_c3lh4"]
resource_name = "Run"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player_animation:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.174533, -0.174533, 0.174533]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player_animation:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_1cy2q"]
resource_name = "SWORD ATTAKE"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sword:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_xfvoh"]
resource_name = "Walk"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player_animation:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0872665, -0.0872665, 0.0872665]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player_animation:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.95, 1.05), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_rkqqh"]
resource_name = "jomp_end"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/Control/GameUi/Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pdpcf"]
_data = {
"Idle": SubResource("Animation_yysya"),
"Jump": SubResource("Animation_2etp0"),
"RESET": SubResource("Animation_tg2wj"),
"Run": SubResource("Animation_c3lh4"),
"SWORD ATTAKE": SubResource("Animation_1cy2q"),
"Walk": SubResource("Animation_xfvoh"),
"jomp_end": SubResource("Animation_rkqqh")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_aqt08"]
radius = 4.0
height = 14.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c1f36"]
bg_color = Color(0.103744, 0.103744, 0.103743, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_top = 2.0
expand_margin_bottom = 3.0
shadow_size = 1
shadow_offset = Vector2(-1, -1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1wbwx"]
bg_color = Color(0, 0.512672, 0.0292309, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color(0.197937, 0.197937, 0.197937, 0.6)
shadow_offset = Vector2(-1, -1)

[sub_resource type="CircleShape2D" id="CircleShape2D_t8d1s"]
radius = 36.52

[sub_resource type="CircleShape2D" id="CircleShape2D_2goc6"]
radius = 39.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6n615"]
size = Vector2(50, 50)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3s51y"]
bg_color = Color(0.151276, 0.151276, 0.151276, 1)
corner_radius_top_left = 45
corner_radius_top_right = 45
corner_radius_bottom_right = 45
corner_radius_bottom_left = 45
shadow_color = Color(0, 0, 0, 0.784314)
shadow_size = 35

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("PausePnael", "GamePanel") groups=["Player"]]
z_index = 1
script = ExtResource("1_wlpyr")
PausePnael = NodePath("UI/Control/PauseUi")
GamePanel = NodePath("UI/Control/GameUi")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(0, 9)
emitting = false
amount = 16
lifetime = 0.2
one_shot = true
randomness = 1.0
direction = Vector2(0, -1)
spread = 90.0
gravity = Vector2(0, 90)
initial_velocity_min = 20.0
initial_velocity_max = 30.0
angular_velocity_min = -45.0
angular_velocity_max = 45.0
linear_accel_min = -45.0
linear_accel_max = 45.0
radial_accel_min = -45.0
radial_accel_max = 45.0
tangential_accel_min = -45.0
tangential_accel_max = 45.0
damping_max = 45.0
scale_amount_max = 1.5

[node name="Player_collision" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_2lg64")

[node name="Player_animation" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_54qng")
animation = &"Idle"

[node name="Player_animation_player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pdpcf")
}

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_eq0g0")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("animator")]
script = ExtResource("3_secp5")
animator = NodePath("../../Player_animation")

[node name="Run" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("animator")]
script = ExtResource("4_uftwf")
animator = NodePath("../../Player_animation")
Run_Speed = 80.0

[node name="Walk" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("animator")]
script = ExtResource("5_doywo")
animator = NodePath("../../Player_animation")
Walk_Speed = 40.0

[node name="Jump" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("animator")]
script = ExtResource("6_suhjf")
animator = NodePath("../../Player_animation")

[node name="Attake" type="Node" parent="FiniteStateMachine"]
script = ExtResource("8_rw7fb")

[node name="KnockBack" type="Node" parent="FiniteStateMachine"]
script = ExtResource("9_pcwvf")

[node name="sword" type="Area2D" parent="." groups=["Enemys"]]

[node name="sword" type="Sprite2D" parent="sword"]
texture_filter = 1
position = Vector2(11.051, 0.0509663)
rotation = 0.785398
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_47nhi")
hframes = 32
vframes = 32
frame = 98

[node name="hitbox" type="CollisionShape2D" parent="sword"]
position = Vector2(12.051, 0.0509663)
rotation = 1.5708
scale = Vector2(0.8, 0.8)
shape = SubResource("CapsuleShape2D_aqt08")

[node name="camera" type="Camera2D" parent="." node_paths=PackedStringArray("shake_timer")]
zoom = Vector2(4, 4)
position_smoothing_enabled = true
rotation_smoothing_enabled = true
drag_left_margin = 0.1
drag_top_margin = 0.1
drag_right_margin = 0.1
script = ExtResource("9_5h600")
shake_timer = NodePath("ShakeTimer")

[node name="ShakeTimer" type="Timer" parent="camera"]
unique_name_in_owner = true
one_shot = true

[node name="UI" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("9_aq0h3")

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameUi" type="Panel" parent="UI/Control"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Health_Bar" type="ProgressBar" parent="UI/Control/GameUi"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.806944
anchor_right = 0.1
anchor_bottom = -0.777778
offset_left = 29.0
offset_top = 588.9
offset_right = 88.0
offset_bottom = 598.9
theme_override_styles/background = SubResource("StyleBoxFlat_c1f36")
theme_override_styles/fill = SubResource("StyleBoxFlat_1wbwx")
max_value = 10.0
show_percentage = false

[node name="HealthText" type="Label" parent="UI/Control/GameUi/Health_Bar"]
texture_filter = 1
layout_mode = 0
offset_left = 41.0
offset_top = -28.0
offset_right = 2741.0
offset_bottom = 722.0
scale = Vector2(0.03, 0.03)
text = "شريط الصحة"
label_settings = ExtResource("12_omhln")

[node name="Sprite2D" type="Sprite2D" parent="UI/Control/GameUi"]
texture_filter = 1
position = Vector2(24, 29)
scale = Vector2(2.73438, 2.97656)
texture = ExtResource("2_47nhi")
region_enabled = true
region_rect = Rect2(0, 96, 16, 16)

[node name="PaperNum" type="Label" parent="UI/Control/GameUi"]
texture_filter = 1
layout_mode = 0
offset_left = 848.0
offset_top = 31.0
offset_right = 1123.0
offset_bottom = 69.0
scale = Vector2(0.03, 0.03)
text = "عدد الاوراق المفقودة: "
label_settings = ExtResource("12_omhln")

[node name="CoinNum" type="Label" parent="UI/Control/GameUi"]
texture_filter = 1
layout_mode = 0
offset_left = 495.0
offset_top = 30.0
offset_right = 770.0
offset_bottom = 68.0
scale = Vector2(0.03, 0.03)
text = "عدد العملات: "
label_settings = ExtResource("12_omhln")

[node name="shop" type="Label" parent="UI/Control/GameUi"]
texture_filter = 1
layout_mode = 0
offset_left = 1052.0
offset_top = 166.0
offset_right = 1327.0
offset_bottom = 204.0
scale = Vector2(0.05, 0.05)
text = "المتجر"
label_settings = ExtResource("12_omhln")

[node name="score" type="Label" parent="UI/Control/GameUi"]
texture_filter = 1
layout_mode = 0
offset_left = 837.0
offset_top = 32.0
offset_right = 1137.0
offset_bottom = 782.0
scale = Vector2(0.03, 0.03)
label_settings = ExtResource("12_omhln")
script = ExtResource("13_vdfe5")

[node name="coins2" type="Label" parent="UI/Control/GameUi"]
texture_filter = 1
layout_mode = 0
offset_left = 461.0
offset_top = 32.0
offset_right = 672.0
offset_bottom = 70.0
scale = Vector2(0.03, 0.03)
text = "44"
label_settings = ExtResource("12_omhln")
script = ExtResource("14_lopw3")

[node name="phone control" type="Control" parent="UI/Control/GameUi"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="TouchScreenButton" type="TouchScreenButton" parent="UI/Control/GameUi/phone control"]
texture_filter = 1
position = Vector2(973, 466)
scale = Vector2(1.925, 1.825)
texture_normal = ExtResource("13_ewic2")
shape = SubResource("CircleShape2D_t8d1s")
action = "Player_Jump"
visibility_mode = 1

[node name="TouchScreenButton2" type="TouchScreenButton" parent="UI/Control/GameUi/phone control"]
texture_filter = 1
position = Vector2(214, 474)
scale = Vector2(1.85, 1.75)
texture_normal = ExtResource("14_tdjkf")
shape = SubResource("CircleShape2D_2goc6")
action = "Player_Right"
visibility_mode = 1

[node name="TouchScreenButton3" type="TouchScreenButton" parent="UI/Control/GameUi/phone control"]
texture_filter = 1
position = Vector2(28, 477)
scale = Vector2(1.85, 1.75)
texture_normal = ExtResource("15_2w0sf")
shape = SubResource("CircleShape2D_2goc6")
action = "Player_Left"
visibility_mode = 1

[node name="TouchScreenButton4" type="TouchScreenButton" parent="UI/Control/GameUi/phone control"]
texture_filter = 1
position = Vector2(1063, 90)
scale = Vector2(1.375, 1.4)
texture_normal = ExtResource("16_wj17s")
shape = SubResource("RectangleShape2D_6n615")
action = "esc"
visibility_mode = 1

[node name="TouchScreenButton5" type="TouchScreenButton" parent="UI/Control/GameUi/phone control"]
visible = false
texture_filter = 1
position = Vector2(1025.05, 444.504)
scale = Vector2(-1.66315, -1.8063)
texture_normal = ExtResource("17_w3gxq")
shape = SubResource("CircleShape2D_t8d1s")
action = "#dash"
visibility_mode = 1

[node name="TouchScreenButton6" type="TouchScreenButton" parent="UI/Control/GameUi/phone control"]
texture_filter = 1
position = Vector2(780, 444)
scale = Vector2(1.825, 1.8625)
texture_normal = ExtResource("18_wqiah")
shape = SubResource("CircleShape2D_t8d1s")
action = "Player_Sprint"
visibility_mode = 1

[node name="PauseUi" type="Panel" parent="UI/Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 387.0
offset_top = 107.0
offset_right = -365.0
offset_bottom = -79.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3s51y")

[node name="backButton" type="Button" parent="UI/Control/PauseUi"]
layout_mode = 0
offset_left = 23.0
offset_top = 124.0
offset_right = 371.0
offset_bottom = 186.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0.830335, 0.830335, 0.830335, 1)
theme_override_constants/outline_size = 15
